test/Dialect/ZKIR/structs_fail_04.zkir
// RUN: zkir-opt %s --split-input-file --verify-diagnostics

zkir.struct @ComponentD<[@B, @D, @C]> {
  // expected-note@+1 {{see existing symbol definition here}}
  func.func public @compute(%a: !zkir.felt, %b: !zkir.felt) {
    return
  }
  // expected-error@+1 {{redefinition of symbol named 'compute'}}
  func.func public @compute() {
    return
  }
}
